--- a/banner.html
+++ b/banner.html
@@ -9,5 +9,11 @@
     <h1>Welcome to my Website</h1>
     <p>For more videos please visit TRICK N TRAVEL in youtube</p>
   </div>
+
+  
+  <a class="button" href="footer.html">GO TO FOOTER PAGE</a>
+  
+
+
 </body>
 </html>
