--- a/butt.html
+++ b/butt.html
@@ -12,5 +12,7 @@
     <button class="button">DOWNLOAD</button>
     <button class="button">CART</button>
   </div>
+
+  <a class="button" href="card.html">GO TO CARD PAGE</a>
 </body>
 </html>
