--- a/flexbox.html
+++ b/flexbox.html
@@ -15,5 +15,6 @@
     <div class="flex-item">Item 2</div>
     <div class="flex-item">Item 3</div>
   </div>
+  <a class="button" href="banner.html">GO TO BANNER PAGE</a>
 </body>
 </html>
