--- a/form.html
+++ b/form.html
@@ -34,6 +34,7 @@
     <button type="submit">SUBMIT</button>
   </form>
 </div>
+<a class="button" href="cald.html">GO TO CALENDAR PAGE</a>
 
 </body>
 </html>
