--- a/log in page.html
+++ b/log in page.html
@@ -16,5 +16,7 @@
       <button type="submit">Login</button>
     </form>
   </div>
+
+  <a class="button" href="form.html">GO TO FORM PAGE</a>
 </body>
 </html>
