--- a/cald.html
+++ b/cald.html
@@ -2,23 +2,8 @@
 <html>
 <head>
   <title>Colorful Calendar</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="caldstyle.css">
 </head>
-
-<head>
-  <title>Button Examples</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <h1>TASK-1 FANCY BUTTONS</h1>
-  <div class="button-container">
-    <button class="button">LOG IN</button>
-    <button class="button">SIGN UP</button>
-    <button class="button">DOWNLOAD</button>
-    <button class="button">CART</button>
-  </div>
-</body>
-</html>
 
 
 
@@ -71,64 +56,6 @@
       <div class="day"></div>
     </div>
   </div>
+  <a class="button" href="flexbox.html">GO TO FLEXBOX PAGE</a>
 </body>
 </html>
-
-
-
-
-
-<html>
-  <head>
-
-    <link rel="stylesheet" href="styles.css">
-  </head>
-<body>
-<div class="container">
-  <h1>Personal Information</h1>
-  <form>
-    <label for="firstName">First Name:</label>
-    <input type="text" id="firstName" name="firstName" required>
-
-    <label for="lastName">Last Name:</label>
-    <input type="text" id="lastName" name="lastName" required>
-
-    <label for="age">Age:</label>
-    <input type="number" id="age" name="age" required>
-
-    <label>Gender:</label>
-    <input type="radio" id="male" name="gender" value="male" required>
-    <label for="male">Male</label>
-    <input type="radio" id="female" name="gender" value="female" required>
-    <label for="female">Female</label>
-
-    <label for="profession">Profession:</label>
-    <input type="text" id="profession" name="profession" required>
-
-    <label for="university">University:</label>
-    <input type="text" id="university" name="university" required>
-
-    <button type="submit">Submit</button>
-  </form>
-</div>
-
-<div class="container">
-  <a class="button" href="flexbox.html">Go to Flexbox Page</a>
-</div>
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
